--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,5 +4,8 @@ nixPkgs = ["nodejs-18_x", "npm-8_x"]
 [phases.install]
 cmds = ["npm ci --omit=dev"]
 
+[phases.build]
+cmds = ["npm run build"]
+
 [start]
 cmd = "npm run start"
