--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "node -e \"const fs = require('fs'); const path = 'server/data'; if (!fs.existsSync(path)) fs.mkdirSync(path, {recursive: true}); const file = path + '/leads.json'; if (!fs.existsSync(file)) fs.writeFileSync(file, '[]');\" && cross-env NODE_ENV=production node dist/index.js",
     "start:prod": "cross-env NODE_ENV=production npm ci --omit=dev && node dist/index.js",
     "check": "tsc"
   },
