--- a/package.json
+++ b/package.json
@@ -39,37 +39,38 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "@tanstack/react-query": "^5.60.5",
-    "@types/cors": "^2.8.19",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "date-fns": "^3.6.0",
-    "express": "^4.21.2",
-    "framer-motion": "^11.13.1",
-    "lucide-react": "^0.453.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.55.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "wouter": "^3.3.5",
-    "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0",
     "@replit/vite-plugin-cartographer": "^0.3.1",
     "@replit/vite-plugin-dev-banner": "^0.1.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.60.5",
+    "@types/cors": "^2.8.19",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "cross-env": "^10.1.0",
+    "date-fns": "^3.6.0",
     "esbuild": "^0.25.10",
+    "express": "^4.21.2",
+    "framer-motion": "^11.13.1",
+    "lucide-react": "^0.453.0",
     "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.55.0",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.5",
     "typescript": "^5.6.3",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+    "wouter": "^3.3.5",
+    "zod": "^3.24.2",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
